# cpp_cookiecutter

./: .bumpversion.cfg  .travis.yml  CONTRIBUTING.rst  LICENSE  README.md  README.rst  azure-pipelines.yml  cookiecutter.json  cpp_cookiecutter-dev-requirements.yml  setup.py
.circleci/: config.yml
ci_scripts/: citest.sh
docs/: CMakeLists.txt  Makefile  environment.yml
docs/source/: basic_usage.rst  benchmark.rst  changelog.rst  compilers.rst  conf.py  examples.rst  folder_structure.rst  index.rst  installation.rst  python.rst  unit_tests.rst
hooks/: post_gen_project.py  pre_gen_project.py
tests/: cookiecutter_config.yaml  test_project.sh
tests/toy_project/: .gitignore  CMakeLists.txt  main.cpp
{{cookiecutter.github_project_name}}/: .bumpversion.cfg  .travis.yml  CMakeLists.txt  CONTRIBUTING.rst  LICENCE.txt  README.rst  azure-pipelines.yml  readthedocs.yml  {{cookiecutter.cmake_project_name}}.pc.in  {{cookiecutter.cmake_project_name}}Config.cmake.in  {{cookiecutter.package_name}}-dev-requirements.yml
{{cookiecutter.github_project_name}}/.circleci/: config.yml
{{cookiecutter.github_project_name}}/.github/: ISSUE_TEMPLATE.md
{{cookiecutter.github_project_name}}/benchmark/: CMakeLists.txt  benchmark_{{cookiecutter.cmake_project_name}}.cpp  copyGBenchmark.cmake.in  downloadGBenchmark.cmake.in  main.cpp
{{cookiecutter.github_project_name}}/binder/: Dockerfile
{{cookiecutter.github_project_name}}/cmake/modules/: FindDOCTEST.cmake
{{cookiecutter.github_project_name}}/docker/: Dockerfile
{{cookiecutter.github_project_name}}/docs/: CMakeLists.txt  Doxyfile  environment.yml
{{cookiecutter.github_project_name}}/docs/source/: basic_usage.rst  benchmark.rst  conf.py  examples.rst  features.rst  folder_structure.rst  index.rst  installation.rst  python.rst  unit_tests.rst
{{cookiecutter.github_project_name}}/examples/: CMakeLists.txt  hello_world.cpp  {{cookiecutter.package_name}}_version.cpp
{{cookiecutter.github_project_name}}/hooks/: pre_gen_project.py
{{cookiecutter.github_project_name}}/include/{{cookiecutter.cpp_root_folder_name}}/: {{ cookiecutter.package_name}}.hpp  {{ cookiecutter.package_name}}_config.hpp  {{ cookiecutter.package_name}}_version_major.hpp  {{ cookiecutter.package_name}}_version_minor.hpp  {{ cookiecutter.package_name}}_version_patch.hpp
{{cookiecutter.github_project_name}}/python/: CMakeLists.txt
{{cookiecutter.github_project_name}}/python/module/{{cookiecutter.python_package_name}}/: __init__.py
{{cookiecutter.github_project_name}}/python/notebooks/: hello_world.ipynb
{{cookiecutter.github_project_name}}/python/src/: CMakeLists.txt  def_build_config.cpp  def_myclass.cpp  main.cpp  main_no_xt.cpp  main_xt.cpp
{{cookiecutter.github_project_name}}/python/tests/: test_build_configuration.py  test_{{cookiecutter.python_package_name}}.py
{{cookiecutter.github_project_name}}/recipe/: bld.bat  build.sh  meta.yaml
{{cookiecutter.github_project_name}}/test/: CMakeLists.txt  test_{{cookiecutter.package_name}}_config.cpp
